<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edittext_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_uri"
        />

    <Button
        android:id="@+id/button_open_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_uri"
        android:layout_marginBottom="24dp"
        android:onClick="openWebsite"
        />

    <EditText
        android:id="@+id/edittext_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_location"
        />

    <Button
        android:id="@+id/button_open_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_location"
        android:layout_marginBottom="24dp"
        android:onClick="openLocation"
        />

    <EditText
        android:id="@+id/edittext_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_share"
        />

    <Button
        android:id="@+id/button_share_this_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_share"
        android:layout_marginBottom="24dp"
        android:onClick="shareText"
        />
</LinearLayout>